<resources>
    <string name="app_name">WishList</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="deletetask">Deletedtasks</string>
    <string name="title_activity_user_items">UserItems</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="server_client_id">1039967043535-8mh5bvi1dlvseb799jtr6d2des0260jk.apps.googleusercontent.com</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name = "pending">Pending</string>
    <string name = "completed">Completed</string>
    <string name = "logout">Logout</string>
    <string name="wish">Wish</string>
    <string name="list">List</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="emailid">Emailid</string>
    <string name="password">Password</string>
    <string name="not_a_member">Not a member?</string>
    <string name="username">Username</string>
    <string name="already_a_user">Already a user?</string>
    z
    <string-array name="drawerlistitems" >
        <item name = "pending">@string/pending</item>
        <item name = "completed">@string/completed</item>
        <item name = "logout">@string/logout</item>
    </string-array>
    <string-array name="drawericons">
        <item name = "completedicon">@drawable/completed</item>
        <item name = "pendingicon">@drawable/pending</item>
        <item name = "logouticon">@drawable/logout</item>
    </string-array>
</resources>
