<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wish"
        android:textSize="30dp"
        android:layout_marginLeft="120sp"
        android:layout_marginTop="20sp"
        android:textColor="@color/textcolor"
        android:textStyle="bold"
        android:id="@+id/tasktv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:textSize="30sp"
        android:layout_marginTop="20sp"
        android:textColor="@color/colorAccent"
        android:layout_toRightOf="@+id/tasktv"
        android:layout_toEndOf="@+id/tasktv"
        android:id="@+id/listtv" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:textColor="@color/textColorPrimary"
        android:id="@+id/logintv"
        android:layout_below="@+id/tasktv"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@id/emailid"
        android:hint="@string/emailid"
        android:layout_marginTop="20sp"
        android:theme="@style/MyEditTextTheme"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/textColorPrimary"
        android:layout_below="@+id/logintv"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@id/password"
        android:hint="@string/password"
        android:layout_marginTop="20sp"
        android:theme="@style/MyEditTextTheme"
        android:textColorHighlight="@color/colorAccent"
        android:textColorHint="@color/textColorPrimary"
        android:layout_below="@+id/emailid"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_marginTop="20sp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:textColor="@color/textColorSecondary"
        android:background="@color/textColorPrimary"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20sp"
        android:visibility="visible"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/textviewsignup"
        android:layout_marginTop="20sp"
        android:textSize="25dp"
        android:text="@string/not_a_member"
        android:textColor="@color/textColorPrimary"
        android:layout_below="@id/sign_in_button"
        android:layout_centerHorizontal="true" />


</RelativeLayout>